@@ -22,4 +22,4 @@ Contributors (Kiwi2):
     Gustavo Rahal <gustavo@async.com.br>
     Henrique Romano <henrique@async.com.br>
     Lorenzo Gil Sanchez <lgs@sicem.biz>
-
+    Patrick K O'Brien <pobrien@orbtech.com>
