@@ -1,3 +1,12 @@
+2006-02-01  Patrick K O'Brien <pobrien@orbtech.com>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/argcheck.py:
+	* tests/test_argcheck.py:
+
+	Add parenthesis in percent checker, add unit tests.
+
 === 1.9.5 ===
 2006-01-30  Johan Dahlin  <jdahlin@async.com.br>
 
